EquationSolver/Pattern/EquationGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/aosamesan/RiderProjects/EquationSolver/EquationSolver/Pattern/EquationGrammar.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace EquationSolver.Pattern {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class EquationGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LPAREN=1, RPAREN=2, VARIABLE=3, PLUS=4, MINUS=5, ASTER=6, SLASH=7, POWER=8, 
		PERCENT=9, FACTORIAL=10, EULER=11, PI=12, MODULUS=13, SIN=14, COSEC=15, 
		COS=16, SEC=17, TAN=18, COT=19, ARCSIN=20, ARCCSC=21, ARCCOS=22, ARCSEC=23, 
		ARCTAN=24, ARCCOT=25, SINH=26, COSH=27, TANH=28, CSCH=29, SECH=30, COTH=31, 
		ASINH=32, ACOSH=33, ATANH=34, ACSCH=35, ASECH=36, ACOTH=37, LOG10=38, 
		LOG=39, EXP=40, SQRT=41, NUMBER=42, WHITESPACE=43;
	public const int
		RULE_statement = 0, RULE_addition = 1, RULE_modulus = 2, RULE_multiplication = 3, 
		RULE_power_without_percentage = 4, RULE_power = 5, RULE_signed_atom = 6, 
		RULE_atom_without_percentage = 7, RULE_atom = 8, RULE_variable_with_scalar_product = 9, 
		RULE_variable_with_power = 10, RULE_factorial = 11, RULE_percentage = 12, 
		RULE_functional = 13, RULE_function_name = 14, RULE_number = 15, RULE_variable = 16, 
		RULE_constant = 17;
	public static readonly string[] ruleNames = {
		"statement", "addition", "modulus", "multiplication", "power_without_percentage", 
		"power", "signed_atom", "atom_without_percentage", "atom", "variable_with_scalar_product", 
		"variable_with_power", "factorial", "percentage", "functional", "function_name", 
		"number", "variable", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'x'", "'+'", "'-'", null, null, "'^'", "'%'", "'!'", 
		"'e'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LPAREN", "RPAREN", "VARIABLE", "PLUS", "MINUS", "ASTER", "SLASH", 
		"POWER", "PERCENT", "FACTORIAL", "EULER", "PI", "MODULUS", "SIN", "COSEC", 
		"COS", "SEC", "TAN", "COT", "ARCSIN", "ARCCSC", "ARCCOS", "ARCSEC", "ARCTAN", 
		"ARCCOT", "SINH", "COSH", "TANH", "CSCH", "SECH", "COTH", "ASINH", "ACOSH", 
		"ATANH", "ACSCH", "ASECH", "ACOTH", "LOG10", "LOG", "EXP", "SQRT", "NUMBER", 
		"WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EquationGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static EquationGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EquationGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EquationGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StatementContext : ParserRuleContext {
		public AdditionContext addition() {
			return GetRuleContext<AdditionContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(EquationGrammarParser.Eof, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 0, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; addition(0);
			State = 37; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdditionContext : ParserRuleContext {
		public IToken op;
		public ModulusContext modulus() {
			return GetRuleContext<ModulusContext>(0);
		}
		public AdditionContext[] addition() {
			return GetRuleContexts<AdditionContext>();
		}
		public AdditionContext addition(int i) {
			return GetRuleContext<AdditionContext>(i);
		}
		public ITerminalNode PLUS() { return GetToken(EquationGrammarParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(EquationGrammarParser.MINUS, 0); }
		public AdditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_addition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterAddition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitAddition(this);
		}
	}

	[RuleVersion(0)]
	public AdditionContext addition() {
		return addition(0);
	}

	private AdditionContext addition(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		AdditionContext _localctx = new AdditionContext(Context, _parentState);
		AdditionContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_addition, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 40; modulus(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 47;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AdditionContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_addition);
					State = 42;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 43;
					_localctx.op = TokenStream.LT(1);
					_la = TokenStream.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
						_localctx.op = ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					State = 44; addition(2);
					}
					} 
				}
				State = 49;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ModulusContext : ParserRuleContext {
		public IToken op;
		public MultiplicationContext multiplication() {
			return GetRuleContext<MultiplicationContext>(0);
		}
		public ModulusContext[] modulus() {
			return GetRuleContexts<ModulusContext>();
		}
		public ModulusContext modulus(int i) {
			return GetRuleContext<ModulusContext>(i);
		}
		public ITerminalNode MODULUS() { return GetToken(EquationGrammarParser.MODULUS, 0); }
		public ITerminalNode PERCENT() { return GetToken(EquationGrammarParser.PERCENT, 0); }
		public ITerminalNode LPAREN() { return GetToken(EquationGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return GetRuleContext<AdditionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(EquationGrammarParser.RPAREN, 0); }
		public ModulusContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modulus; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterModulus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitModulus(this);
		}
	}

	[RuleVersion(0)]
	public ModulusContext modulus() {
		return modulus(0);
	}

	private ModulusContext modulus(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ModulusContext _localctx = new ModulusContext(Context, _parentState);
		ModulusContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_modulus, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 51; multiplication(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 64;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 62;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
					case 1:
						{
						_localctx = new ModulusContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_modulus);
						State = 53;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 54;
						_localctx.op = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==PERCENT || _la==MODULUS) ) {
							_localctx.op = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 55; modulus(3);
						}
						break;
					case 2:
						{
						_localctx = new ModulusContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_modulus);
						State = 56;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 57;
						_localctx.op = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==PERCENT || _la==MODULUS) ) {
							_localctx.op = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 58; Match(LPAREN);
						State = 59; addition(0);
						State = 60; Match(RPAREN);
						}
						break;
					}
					} 
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class MultiplicationContext : ParserRuleContext {
		public IToken op;
		public PowerContext power() {
			return GetRuleContext<PowerContext>(0);
		}
		public Signed_atomContext signed_atom() {
			return GetRuleContext<Signed_atomContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(EquationGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return GetRuleContext<AdditionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(EquationGrammarParser.RPAREN, 0); }
		public MultiplicationContext[] multiplication() {
			return GetRuleContexts<MultiplicationContext>();
		}
		public MultiplicationContext multiplication(int i) {
			return GetRuleContext<MultiplicationContext>(i);
		}
		public ITerminalNode ASTER() { return GetToken(EquationGrammarParser.ASTER, 0); }
		public ITerminalNode SLASH() { return GetToken(EquationGrammarParser.SLASH, 0); }
		public Power_without_percentageContext power_without_percentage() {
			return GetRuleContext<Power_without_percentageContext>(0);
		}
		public MultiplicationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multiplication; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterMultiplication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitMultiplication(this);
		}
	}

	[RuleVersion(0)]
	public MultiplicationContext multiplication() {
		return multiplication(0);
	}

	private MultiplicationContext multiplication(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		MultiplicationContext _localctx = new MultiplicationContext(Context, _parentState);
		MultiplicationContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_multiplication, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 68; power(0);
				}
				break;
			case 2:
				{
				State = 69; signed_atom();
				}
				break;
			case 3:
				{
				State = 70; Match(LPAREN);
				State = 71; addition(0);
				State = 72; Match(RPAREN);
				State = 73; multiplication(2);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 84;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 82;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new MultiplicationContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_multiplication);
						State = 77;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 78;
						_localctx.op = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==ASTER || _la==SLASH) ) {
							_localctx.op = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 79; multiplication(4);
						}
						break;
					case 2:
						{
						_localctx = new MultiplicationContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_multiplication);
						State = 80;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 81; power_without_percentage(0);
						}
						break;
					}
					} 
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Power_without_percentageContext : ParserRuleContext {
		public IToken op;
		public Atom_without_percentageContext atom_without_percentage() {
			return GetRuleContext<Atom_without_percentageContext>(0);
		}
		public Power_without_percentageContext power_without_percentage() {
			return GetRuleContext<Power_without_percentageContext>(0);
		}
		public ITerminalNode POWER() { return GetToken(EquationGrammarParser.POWER, 0); }
		public PowerContext power() {
			return GetRuleContext<PowerContext>(0);
		}
		public Signed_atomContext signed_atom() {
			return GetRuleContext<Signed_atomContext>(0);
		}
		public Power_without_percentageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_power_without_percentage; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterPower_without_percentage(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitPower_without_percentage(this);
		}
	}

	[RuleVersion(0)]
	public Power_without_percentageContext power_without_percentage() {
		return power_without_percentage(0);
	}

	private Power_without_percentageContext power_without_percentage(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Power_without_percentageContext _localctx = new Power_without_percentageContext(Context, _parentState);
		Power_without_percentageContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_power_without_percentage, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 88; atom_without_percentage();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 98;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Power_without_percentageContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_power_without_percentage);
					State = 90;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 91; _localctx.op = Match(POWER);
					State = 94;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case LPAREN:
					case VARIABLE:
					case SIN:
					case COSEC:
					case COS:
					case SEC:
					case TAN:
					case COT:
					case ARCSIN:
					case ARCCSC:
					case ARCCOS:
					case ARCSEC:
					case ARCTAN:
					case ARCCOT:
					case SINH:
					case COSH:
					case TANH:
					case CSCH:
					case SECH:
					case COTH:
					case ASINH:
					case ACOSH:
					case ATANH:
					case ACSCH:
					case ASECH:
					case ACOTH:
					case LOG10:
					case LOG:
					case EXP:
					case SQRT:
					case NUMBER:
						{
						State = 92; power(0);
						}
						break;
					case PLUS:
					case MINUS:
						{
						State = 93; signed_atom();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				State = 100;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class PowerContext : ParserRuleContext {
		public IToken op;
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public PowerContext[] power() {
			return GetRuleContexts<PowerContext>();
		}
		public PowerContext power(int i) {
			return GetRuleContext<PowerContext>(i);
		}
		public ITerminalNode POWER() { return GetToken(EquationGrammarParser.POWER, 0); }
		public Signed_atomContext signed_atom() {
			return GetRuleContext<Signed_atomContext>(0);
		}
		public PowerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_power; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
	}

	[RuleVersion(0)]
	public PowerContext power() {
		return power(0);
	}

	private PowerContext power(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		PowerContext _localctx = new PowerContext(Context, _parentState);
		PowerContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_power, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 102; atom(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 112;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PowerContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_power);
					State = 104;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 105; _localctx.op = Match(POWER);
					State = 108;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case LPAREN:
					case VARIABLE:
					case SIN:
					case COSEC:
					case COS:
					case SEC:
					case TAN:
					case COT:
					case ARCSIN:
					case ARCCSC:
					case ARCCOS:
					case ARCSEC:
					case ARCTAN:
					case ARCCOT:
					case SINH:
					case COSH:
					case TANH:
					case CSCH:
					case SECH:
					case COTH:
					case ASINH:
					case ACOSH:
					case ATANH:
					case ACSCH:
					case ASECH:
					case ACOTH:
					case LOG10:
					case LOG:
					case EXP:
					case SQRT:
					case NUMBER:
						{
						State = 106; power(0);
						}
						break;
					case PLUS:
					case MINUS:
						{
						State = 107; signed_atom();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				State = 114;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Signed_atomContext : ParserRuleContext {
		public IToken sign;
		public PowerContext power() {
			return GetRuleContext<PowerContext>(0);
		}
		public ITerminalNode PLUS() { return GetToken(EquationGrammarParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(EquationGrammarParser.MINUS, 0); }
		public Signed_atomContext signed_atom() {
			return GetRuleContext<Signed_atomContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(EquationGrammarParser.LPAREN, 0); }
		public AdditionContext addition() {
			return GetRuleContext<AdditionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(EquationGrammarParser.RPAREN, 0); }
		public Signed_atomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signed_atom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.EnterSigned_atom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IEquationGrammarListener typedListener = listener as IEquationGrammarListener;
			if (typedListener != null) typedListener.ExitSigned_atom(this);
		}
	}

	[RuleVersion(0)]
	public Signed_atomContext signed_atom() {
		Signed_atomContext _localctx = new Signed_atomContext(Context, State);
		EnterRule(_localctx, 12, RULE_signed_atom);
		int _la;
		try {
			State = 124;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 115;
				_localctx.sign = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					_localctx.sign = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 116; power(0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117;
				_localctx.sign = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					_localctx.sign = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 118; signed_atom();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 119;
				_localctx.sign = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					_localctx.sign = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 120; Match(LPAREN);
				State = 121; addition(0);
				State = 122; Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
